--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -134,7 +134,7 @@
 
                     <div class="form-field">
                         <label>Organization name:</label>
-                        <input type="text" name="Organization" class="questions, form-control" placeholder="UT Dallas">
+                        <input type="text" name="Organization" class="questions form-control" placeholder="UT Dallas">
                         <a href="#" class="rem"> &nbsp</a>
                         <a href="#" class="rem"> &nbsp</a>
                         <br>
@@ -143,21 +143,21 @@
                     <div class="Que">
                         <div class="form-field">
                             <label>Question 1:</label>
-                            <input type="text" name="Question 1" class="questions, form-control" placeholder="What's your favorite programming language?">
+                            <input type="text" name="Question 1" class="questions form-control" placeholder="What's your favorite programming language?">
                             <a href="#" class="rem"> X</a>
                             <br>
                             <br>
                         </div>
                         <div class="form-field">
                             <label>Question 2:</label>
-                            <input type="text" name="Question 2" class="questions, form-control" placeholder="Origal vs Prequels Star Wars?">
+                            <input type="text" name="Question 2" class="questions form-control" placeholder="Origal vs Prequels Star Wars?">
                             <a href="#" class="rem"> X </a>
                             <br>
                             <br>
                         </div>
                         <div class="form-field">
                             <label>Question 3:</label>
-                            <input type="text" name="Question 3" class="questions, form-control" placeholder='Favorite car?'>
+                            <input type="text" name="Question 3" class="questions form-control" placeholder='Favorite car?'>
                             <a href="#" class="rem"> X </a>
                             <br>
                             <br>
@@ -170,22 +170,19 @@
 
                     <div class="form-field">
                         <label>Message for sign-ups:</label>
-                        <input type="text" class="questions , form-control" name="Message">
+                        <input type="text" class="questions form-control" name="Message">
                         <br>
                         <br>
                     </div>
                     <div class="form-field">
                         <label>Deadline:</label>
-                        <input class="questions , form-control" type="text" id="datepicker">
+                        <input class="questions form-control" type="text" id="datepicker">
                         <br>
                         <br>
                     </div>
                     <input type="submit" value="Submit" class="submit">
 
                 </form>
-
-                <pre id="result">
-                        </pre>
             </div>
         </div>
 
