--- a/website/sampleMember.html
+++ b/website/sampleMember.html
@@ -132,7 +132,12 @@
 
 
                 <form id="orgForm" action="" method="post">
-
+                    <div class="form-field">
+                        <label>Your org:</label>
+                        <label class="form-control">CodeRED</label>
+                        <br>
+                        <br>
+                    </div>
                     <div class="form-field">
                         <label>Your name:</label>
                         <input type="text" name="Name" class="questions form-control">
