adding user response

--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -194,7 +194,7 @@
         <script src='https://sdk.amazonaws.com/js/aws-sdk-2.145.0.min.js'></script>
         <script src="script/question.js"></script>
         <script src="script/config.js"></script>
-        <script src="script/upload.js"></script>
+        <script src="script/orgCreation.js"></script>
 
         <footer class="footer, row">
             <center>
