--- a/website/sampleMember.html
+++ b/website/sampleMember.html
@@ -181,7 +181,7 @@
         <script src='https://sdk.amazonaws.com/js/aws-sdk-2.145.0.min.js'></script>
         <script src="script/question.js"></script>
         <script src="script/config.js"></script>
-        <script src="script/upload.js"></script>
+        <script src="script/userResponse.js"></script>
 
         <footer class="footer, row">
             <center>
