--- a/website/sampleMember.html
+++ b/website/sampleMember.html
@@ -145,6 +145,18 @@
                         <br>
                     </div>
                     <div class="form-field">
+                        <label>Your email address:</label>
+                        <input type="text" name="Email" class="questions form-control">
+                        <br>
+                        <br>
+                    </div>
+                    <div class="form-field">
+                        <label>Your mailing address:</label>
+                        <input type="text" name="Address" class="questions form-control">
+                        <br>
+                        <br>
+                    </div>
+                    <div class="form-field">
                         <label>Age:</label>
                         <input type="text" name="Age" class="questions form-control">
                         <br>
