--- a/website/sampleMember.html
+++ b/website/sampleMember.html
@@ -134,7 +134,7 @@
                 <form id="orgForm" action="" method="post">
                     <div class="form-field">
                         <label>Your organization:</label>
-                        <label class="form-control">CodeRED</label>
+                        <label id="ORG" class="form-control">CodeRED</label>
                         <br>
                         <br>
                     </div>
@@ -169,7 +169,7 @@
                         <br>
                     </div>
                     <br>
-                    <hr>                    
+                    <hr>
                     <br>
                     <div class="Que">
                         <div class="form-field">
@@ -206,8 +206,10 @@
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
         <script src='https://sdk.amazonaws.com/js/aws-sdk-2.145.0.min.js'></script>
-        <script src="script/question.js"></script>
+
         <script src="script/config.js"></script>
+        <script src="script/question.js"></script>
+        <script src="script/member.js"></script>
         <script src="script/userResponse.js"></script>
 
         <footer class="footer, row">
