--- a/website/sampleMember.html
+++ b/website/sampleMember.html
@@ -95,8 +95,6 @@
 </head>
 
 <body>
-
-    </script>
     <div class="container">
         <header class="header, row">
             <div class="home-menu pure-menu pure-menu-horizontal">
@@ -172,27 +170,63 @@
                     <hr>
                     <br>
                     <div class="Que">
-                        <div class="form-field">
-                            <label>Tabs or Spaces?</label>
+                        <div id="form1" class="form-field">
+                            <label id="question1">Tabs or Spaces?</label>
                             <input type="text" name="Answer1" class="questions form-control">
                             <br>
                             <br>
                         </div>
-                        <div class="form-field">
-                            <label>Vim or Emacs?</label>
+                        <div id="form2" class="form-field">
+                            <label id="question2">Vim or Emacs?</label>
                             <input type="text" name="Answer2" class="questions form-control">
                             <br>
                             <br>
                         </div>
-                        <div class="form-field">
-                            <label>Mac or PC?</label>
+                        <div id="form3" class="form-field">
+                            <label id="question3">Mac or PC?</label>
                             <input type="text" name="Answer3" class="questions form-control">
                             <br>
                             <br>
                         </div>
-                        <div class="form-field">
-                            <label>PC or Console?</label>
+                        <div id="form4"class="form-field">
+                            <label id="question4">PC or Console?</label>
                             <input type="text" name="Answer4" class="questions form-control">
+                            <br>
+                            <br>
+                        </div>
+                        <div id="form5"class="form-field">
+                            <label id="question5">PC or Console?</label>
+                            <input type="text" name="Answer5" class="questions form-control">
+                            <br>
+                            <br>
+                        </div>
+                        <div id="form6"class="form-field">
+                            <label id="question6">PC or Console?</label>
+                            <input type="text" name="Answer6" class="questions form-control">
+                            <br>
+                            <br>
+                        </div>
+                        <div id="form7"class="form-field">
+                            <label id="question7">PC or Console?</label>
+                            <input type="text" name="Answer7" class="questions form-control">
+                            <br>
+                            <br>
+                        </div>
+                        <div id="form8"class="form-field">
+                            <label id="question8">PC or Console?</label>
+                            <input type="text" name="Answer8" class="questions form-control">
+                            <br>
+                            <br>
+                        </div>
+                        <div id="form9"class="form-field">
+                            <label id="question9">PC or Console?</label>
+                            <input type="text" name="Answer9" class="questions form-control">
+                            <br>
+                            <br>
+                        </div>
+                        <div id="form10"class="form-field">
+                            <label id="question10">PC or Console?</label>
+                            <input type="text" name="Answer10" class="questions form-control">
                             <br>
                             <br>
                         </div>
