--- a/website/sampleMember.html
+++ b/website/sampleMember.html
@@ -132,7 +132,7 @@
                 <form id="orgForm" action="" method="post">
                     <div class="form-field">
                         <label>Your organization:</label>
-                        <label id="ORG" class="form-control">CodeRED</label>
+                        <label id="ORG" class="form-control"></label>
                         <br>
                         <br>
                     </div>
@@ -171,61 +171,61 @@
                     <br>
                     <div class="Que">
                         <div id="form1" class="form-field">
-                            <label id="question1">Tabs or Spaces?</label>
+                            <label id="question1">Question: </label>
                             <input type="text" name="Answer1" class="questions form-control">
                             <br>
                             <br>
                         </div>
                         <div id="form2" class="form-field">
-                            <label id="question2">Vim or Emacs?</label>
+                            <label id="question2">Question: </label>
                             <input type="text" name="Answer2" class="questions form-control">
                             <br>
                             <br>
                         </div>
                         <div id="form3" class="form-field">
-                            <label id="question3">Mac or PC?</label>
+                            <label id="question3">Question: </label>
                             <input type="text" name="Answer3" class="questions form-control">
                             <br>
                             <br>
                         </div>
                         <div id="form4"class="form-field">
-                            <label id="question4">PC or Console?</label>
+                            <label id="question4">Question: </label>
                             <input type="text" name="Answer4" class="questions form-control">
                             <br>
                             <br>
                         </div>
                         <div id="form5"class="form-field">
-                            <label id="question5">PC or Console?</label>
+                            <label id="question5">Question: </label>
                             <input type="text" name="Answer5" class="questions form-control">
                             <br>
                             <br>
                         </div>
                         <div id="form6"class="form-field">
-                            <label id="question6">PC or Console?</label>
+                            <label id="question6">Question: </label>
                             <input type="text" name="Answer6" class="questions form-control">
                             <br>
                             <br>
                         </div>
                         <div id="form7"class="form-field">
-                            <label id="question7">PC or Console?</label>
+                            <label id="question7">Question: </label>
                             <input type="text" name="Answer7" class="questions form-control">
                             <br>
                             <br>
                         </div>
                         <div id="form8"class="form-field">
-                            <label id="question8">PC or Console?</label>
+                            <label id="question8">Question: </label>
                             <input type="text" name="Answer8" class="questions form-control">
                             <br>
                             <br>
                         </div>
                         <div id="form9"class="form-field">
-                            <label id="question9">PC or Console?</label>
+                            <label id="question9">Question: </label>
                             <input type="text" name="Answer9" class="questions form-control">
                             <br>
                             <br>
                         </div>
                         <div id="form10"class="form-field">
-                            <label id="question10">PC or Console?</label>
+                            <label id="question10">Question: </label>
                             <input type="text" name="Answer10" class="questions form-control">
                             <br>
                             <br>
