--- a/website/sampleMember.html
+++ b/website/sampleMember.html
@@ -126,9 +126,9 @@
 
             <div class="jumbotron-inner">
                 <h1>Fill out the form below!</h1>
-                <br><br>
-
-
+                <br>
+                <div><h2 id="message0"></h2></div>
+                <br>
                 <form id="orgForm" action="" method="post">
                     <div class="form-field">
                         <label>Your organization:</label>
