--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -182,7 +182,7 @@
                         <br>
                         <br>
                     </div>
-                    <input type="submit" value="Submit" href="website/submitted.html" class="submit">
+                    <input type="submit" value="Submit" class="submit">
 
                 </form>
             </div>
