--- a/website/submitted.html
+++ b/website/submitted.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
@@ -48,10 +49,12 @@
         <div class="snow middleground layered"></div>
 
         <div class="jumbotron-inner">
-            <h1>Thanks for your submission! 
+            <font size="5"> <h1>Thanks for your submission! 
                 <br></h1>
+            </font>
 
-            <strong><br><br>After the deadline everyone will get notified of their match! <br>Thanks for using Santa Hacks</strong>
+            <font size="5"><b><br><br>After the deadline everyone will get notified of their match! <br>Thanks for using Santa Hacks</b>
+            </font>
         </div>
     </div>
 
