--- a/website/submitted.html
+++ b/website/submitted.html
@@ -26,7 +26,7 @@
     <header class="header">
         <div class="home-menu pure-menu pure-menu-horizontal">
             <div class="pure-menu-heading">
-                <a href="#">
+                <a href="index.html">
                     <div class="logo-wrapper">
                         <img src="images/logo.png" alt="Secret Santa" />
                     </div>
