--- a/website/signup.html
+++ b/website/signup.html
@@ -127,6 +127,8 @@
             <div class="jumbotron-inner">
                 <h1>Fill out the form below!</h1>
                 <br>
+                Share this link with people you'd like to participate
+                <br>
                 <div><h2 id="message0"></h2></div>
                 <br>
                 <form id="orgForm" action="" method="post">
