--- a/website/signup.html
+++ b/website/signup.html
@@ -134,7 +134,7 @@
                 <form id="orgForm" action="" method="post">
                     <div class="form-field">
                         <label>Your organization:</label>
-                        <label id="ORG" class="form-control"></label>
+                        <label id="ORG" name="Organization" class="form-control"></label>
                         <br>
                         <br>
                     </div>
