i hate comp arch

--- a/website/signup.html
+++ b/website/signup.html
@@ -126,10 +126,14 @@
 
             <div class="jumbotron-inner">
                 <h1>Fill out the form below!</h1>
+                <br> Share this link with people you'd like to participate
                 <br>
-                Share this link with people you'd like to participate
-                <br>
-                <div><h2 id="message0"></h2></div>
+                <div class="form-field">
+                    <label id="link" name="link" class="form-control"></label>
+                </div>
+                <div>
+                    <h2 id="message0"></h2>
+                </div>
                 <br>
                 <form id="orgForm" action="" method="post">
                     <div class="form-field">
@@ -190,43 +194,43 @@
                             <br>
                             <br>
                         </div>
-                        <div id="form4"class="form-field">
+                        <div id="form4" class="form-field">
                             <label id="question4">Question: </label>
                             <input type="text" name="Answer4" class="questions form-control">
                             <br>
                             <br>
                         </div>
-                        <div id="form5"class="form-field">
+                        <div id="form5" class="form-field">
                             <label id="question5">Question: </label>
                             <input type="text" name="Answer5" class="questions form-control">
                             <br>
                             <br>
                         </div>
-                        <div id="form6"class="form-field">
+                        <div id="form6" class="form-field">
                             <label id="question6">Question: </label>
                             <input type="text" name="Answer6" class="questions form-control">
                             <br>
                             <br>
                         </div>
-                        <div id="form7"class="form-field">
+                        <div id="form7" class="form-field">
                             <label id="question7">Question: </label>
                             <input type="text" name="Answer7" class="questions form-control">
                             <br>
                             <br>
                         </div>
-                        <div id="form8"class="form-field">
+                        <div id="form8" class="form-field">
                             <label id="question8">Question: </label>
                             <input type="text" name="Answer8" class="questions form-control">
                             <br>
                             <br>
                         </div>
-                        <div id="form9"class="form-field">
+                        <div id="form9" class="form-field">
                             <label id="question9">Question: </label>
                             <input type="text" name="Answer9" class="questions form-control">
                             <br>
                             <br>
                         </div>
-                        <div id="form10"class="form-field">
+                        <div id="form10" class="form-field">
                             <label id="question10">Question: </label>
                             <input type="text" name="Answer10" class="questions form-control">
                             <br>
