Questions are working now. More cleanup

--- a/website/createOrg.html
+++ b/website/createOrg.html
@@ -111,7 +111,7 @@
                 <h1>Fill out the form below!</h1>
                 <br>
 
-
+                <hr>
                 <form id="orgForm" action="" method="post">
 
                     <div class="form-field">
@@ -134,21 +134,24 @@
                         <div class="form-field">
                             <label>Question 1:</label>
                             <input type="text" name="Question1" class="questions form-control" placeholder="What's your favorite programming language?">
-                            <a href="#" class="rem"> X</a>
+                            <i class="rem"> &nbsp</i>
+                            <i class="rem"> &nbsp</i>
                             <br>
                             <br>
                         </div>
                         <div class="form-field">
                             <label>Question 2:</label>
                             <input type="text" name="Question2" class="questions form-control" placeholder="Origal vs Prequels Star Wars?">
-                            <a href="#" class="rem"> X </a>
+                            <i class="rem"> &nbsp</i>
+                            <i class="rem"> &nbsp</i>
                             <br>
                             <br>
                         </div>
                         <div class="form-field">
                             <label>Question 3:</label>
                             <input type="text" name="Question3" class="questions form-control" placeholder='Favorite car?'>
-                            <a href="#" class="rem"> X </a>
+                            <i class="rem"> &nbsp</i>
+                            <i class="rem"> &nbsp</i>
                             <br>
                             <br>
                         </div>
@@ -157,7 +160,7 @@
                     <button type="button" name="button" class="addB">Add new Question</button>
                     <br>
                     <br>
-
+                    <hr>
                     <h2>Message for sign-ups:</h2>
                     <div class="form-field">
                         <textarea type="text" class="questions form-control" name="Message" style="height: 150px;"></textarea>
@@ -185,8 +188,6 @@
                 <p>
                     Made with
                     <i class="fa fa-heart"></i> by UT-Disaster @ CodeRed</a>
-                    &mdash; Emoji and logo provided free by
-                    <a href="http://emojione.com">Emoji One</a>
                 </p>
             </center>
         </footer>
